syntax = "proto3";

package ru.hse.lmsteam.proto.exams;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.exams";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";

message GetExam {
  message Response {
    Exam exam = 1;
  }
}

message CreateOrUpdateExam {
  message Request {
    google.protobuf.Timestamp deadline_date = 2;
    google.protobuf.Timestamp publish_date = 3;
    string title = 5;
    string description = 6;
    string grading_criteria = 7;
    repeated string external_material_urls = 8;
  }

  message Response {
    Exam exam = 1;
  }
}

message DeleteExam {
  message Response {
    int64 entries_deleted = 1;
  }
}

message GetExams {
  message Response {
    ru.hse.lmsteam.proto.common.Page page = 1;
    repeated ExamSnippet exams = 2;
  }
}

message Exam {
  string id = 1;
  google.protobuf.Timestamp deadline_date = 2;
  google.protobuf.Timestamp publish_date = 3;
  string title = 4;
  string description = 5;
  string grading_criteria = 6;
  repeated string external_material_urls = 7;
}

message ExamSnippet {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp deadline_date = 3;
}